Fix a bunch of spacing and mobile issues

--- a/astro/src/components/FancyBackground.astro
+++ b/astro/src/components/FancyBackground.astro
@@ -10,19 +10,35 @@ const { points = 30 } = Astro.props
 
 <div class:list={['flex', 'flex-row', 'min-h-[calc(100vh-13.75rem)]']}>
   <div
-    class:list={['fancy-bg', 'print:hidden']}
+    class:list={['fancy-bg', 'print:hidden', 'hidden', 'sm:flex']}
     style={{ '--fluid-pattern-points': points }}
   >
   </div>
   <slot />
   <div
-    class:list={['fancy-bg', 'print:hidden']}
+    class:list={['fancy-bg', 'print:hidden', 'hidden', 'sm:flex']}
     style={{ '--fluid-pattern-points': points }}
   >
   </div>
   <button
     id="fancy-bg-refresh-btn"
-    class="btn btn-lg btn-primary btn-circle fixed tooltip tooltip-left right-4 bottom-4 normal-case print:hidden inline-flex"
+    class:list={[
+      'btn',
+      'btn-lg',
+      'btn-primary',
+      'btn-circle',
+      'fixed',
+      'tooltip',
+      'tooltip-left',
+      'right-4',
+      'bottom-4',
+      'normal-case',
+      'print:hidden',
+      'inline-flex',
+      'hidden',
+      'sm:flex',
+      'cursor-pointer',
+    ]}
     aria-label="Regenerate the background pattern"
     data-tip="Regenerate the background pattern"
     type="reset"
@@ -52,14 +68,14 @@ const { points = 30 } = Astro.props
 </style>
 
 <script>
+  import { on } from 'delegated-events'
+
   window?.CSS?.paintWorklet?.addModule?.(
     'https://cdn.statically.io/gh/eligundry/fluid-pattern-worklet/configurable-items/worklet.bundle.js'
   )
 
   document.addEventListener('DOMContentLoaded', () => {
-    const btn = document.getElementById('fancy-bg-refresh-btn')
     const canvases = document.querySelectorAll('.fancy-bg')
-
     const updateBg = () =>
       canvases.forEach((canvas) => {
         canvas?.style?.setProperty?.(
@@ -68,7 +84,7 @@ const { points = 30 } = Astro.props
         )
       })
 
-    btn?.addEventListener('click', updateBg)
+    on('click', '#fancy-bg-refresh-btn', updateBg)
     updateBg()
   })
 </script>
