--- a/astro/src/components/Post/DemoVideo.astro
+++ b/astro/src/components/Post/DemoVideo.astro
@@ -8,7 +8,7 @@ interface Props {
 const { src, alt, className } = Astro.props
 ---
 
-<video autoplay loop muted class:list={['mx-auto', className]}>
+<video autoplay loop muted class:list={['mx-auto', 'max-w-full', className]}>
   <source src={src} />
   {alt}
 </video>
