--- a/astro/src/components/Post/components.astro
+++ b/astro/src/components/Post/components.astro
@@ -1,17 +1,18 @@
 ---
-import { Tweet } from '@astro-community/astro-embed-twitter'
+// import { Tweet } from '@astro-community/astro-embed-twitter'
 import DemoVideo from './DemoVideo.astro'
 import GithubFile from './GithubFile.astro'
 import Image from './Image.astro'
 import ResponsiveIFrame from './ResponsiveIFrame.astro'
 import StreamingAlbum from './StreamingAlbum.astro'
+import Debug from './Debug.astro'
 
 export const components = {
   DemoVideo,
   GithubFile,
   ResponsiveIFrame,
   StreamingAlbum,
-  Tweet,
+  Tweet: Debug,
   img: Image,
 }
 ---
