Too many fun things to list!

--- a/astro/src/components/FancyBackground.astro
+++ b/astro/src/components/FancyBackground.astro
@@ -30,6 +30,7 @@ const { points = 30 } = Astro.props
       'fixed',
       'tooltip',
       'tooltip-left',
+      'tooltip-primary',
       'right-4',
       'bottom-4',
       'normal-case',
