--- a/astro/src/components/Footer.astro
+++ b/astro/src/components/Footer.astro
@@ -109,6 +109,7 @@ const social = [
           'flex-row',
           'gap-2',
           '[&>a]:tooltip',
+          '[&>a]:tooltip-primary',
           '[&>a]:normal-case',
           '[&>a]:inline-flex',
           '[&>a]:w-8',
