--- a/astro/src/components/Post/Image.astro
+++ b/astro/src/components/Post/Image.astro
@@ -20,4 +20,5 @@ const { aspectRatio, backgroundColor, width } = await getRemoteImageMetadata(
   aspectRatio={aspectRatio}
   format="webp"
   style={{ backgroundColor }}
+  class:list={['max-w-100']}
 />
