--- a/astro/src/components/Post/components.astro
+++ b/astro/src/components/Post/components.astro
@@ -1,18 +1,19 @@
 ---
-// import { Tweet } from '@astro-community/astro-embed-twitter'
+import { Tweet } from '@astro-community/astro-embed-twitter'
 import DemoVideo from './DemoVideo.astro'
 import GithubFile from './GithubFile.astro'
 import Image from './Image.astro'
 import ResponsiveIFrame from './ResponsiveIFrame.astro'
 import StreamingAlbum from './StreamingAlbum.astro'
-import Debug from './Debug.astro'
+import Code from './Code.astro'
 
 export const components = {
   DemoVideo,
   GithubFile,
   ResponsiveIFrame,
   StreamingAlbum,
-  Tweet: Debug,
+  Tweet,
   img: Image,
+  code: Code,
 }
 ---
