--- a/astro/src/pages/resume.astro
+++ b/astro/src/pages/resume.astro
@@ -400,7 +400,7 @@ const resume = {
     `
     Former member of <a href="http://hacksu.cs.kent.edu/">HacKSU</a>, Kent State's hacker community and
     <a href="https://devpost.com/eligundry">competed in numerous hackathons</a> including:
-    <ul class="columns-2 text-sm">
+    <ul class="columns-2 text-sm print:text-xs">
       <li><a href="https://khe.io/">KHE</a> 2013 (2nd place), 2014, 2015</li>
       <li><a href="https://mhacks.org/">MHacks</a> 2013, 2014, 2015</li>
       <li><a href="http://pennapps.com/">PennApps</a> 2014 (1st place Intel XDK App)</li>
@@ -439,7 +439,7 @@ const resume = {
     </header>
     <Section>
       <header class="flex justify-between border-b-2 border-b-accent">
-        <h2 class="my-0 block print:hidden">Work</h2>
+        <h2 class="my-0 text-base block print:hidden">Work</h2>
         <h2 class="my-0 text-base hidden print:block">Selected Work</h2>
         <h6
           class:list={[
