--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -225,6 +225,8 @@ const favoritePosts = (await getCollection('blog'))
           frameborder="0"
           allow="encrypted-media"
           loading="lazy"
+          width="300"
+          height="380"
           class="w-full sm:w-[300px] h-[380px] sm:flex-1"></iframe>
       </div>
       <div>
