--- a/astro/src/components/Footer.astro
+++ b/astro/src/components/Footer.astro
@@ -120,6 +120,7 @@ const social = [
             <a
               href={link.url}
               data-tip={link.label}
+              aria-label={link.label}
               class:list={['btn', 'btn-sm', 'btn-square', 'btn-primary']}
             >
               <link.Icon size="1.75rem" />
