--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -4,7 +4,7 @@ import { SEO } from 'astro-seo'
 import type { CollectionEntry } from 'astro:content'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
-import FancyBackground from '../components/FancyBackground.astro'
+import FancyBackground from '../components/FancyBackground/index.astro'
 import daylio from '../lib/daylio.ts'
 import config from '../config.ts'
 import '../styles/tailwind.css'
@@ -45,7 +45,7 @@ const latestFeeling = await daylio.getLatest()
       title={title}
       titleTemplate={`%s | ${config.title}`}
       titleDefault={config.title}
-      description={description}
+      description={description ?? config.description}
       canonical={config.url + Astro.url.pathname}
       openGraph={{
         basic: {
